# backend/src/user/userRouter.ts
@@ -6,6 +6,7 @@ const controller = new UserController();
 
 userRouter.post('/login', controller.login);
 userRouter.post('/signUp', controller.signUp);
+userRouter.post('/logout', controller.logout);
 userRouter.get('/', controller.getUser);
 userRouter.post('/', controller.updateUser);
 
